--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,10 +1,10 @@
 body {
-    color:#333333;
-    font-family: Arial;
+    color: #333333;
+    font-family: arial;
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
-    
+
     display: flex;
     flex-direction: column;
     min-height: 100vh
@@ -18,7 +18,7 @@ footer {
     color: #888888;
     border-top: 1px solid #eeeeee;
     margin-top: 16px;
-    padding: 16px , 0;
+    padding: 16px 0;
 }
 
 header {
@@ -43,7 +43,7 @@ header a {
 
 input {
     border: 1px solid #cccccc;
-    padding: 9px;
+    padding: 8px;
 }
 
 button {
