--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,10 +10,11 @@
 
 <body>
     <div class="main-content">
-    {{>header}}
-    <img class='portrait' src="/img/me.jpg">
+        {{>header}}
+        <img class="portrait" src="/img/me.png">
     </div>
-     {{>footer}}
+    
+    {{>footer}}
 </body>
 
 </html>
