--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,18 +15,17 @@
         <p>Use this site to get your weather!</p>
 
         <form>
-            <input placeholder='location'>
+            <input placeholder="Location">
             <button>Search</button>
         </form>
 
-        <p id="message-1" ></p>
+        <p id="message-1"></p>
         <p id="message-2"></p>
-
     </div>
-     {{>footer}}
 
-      <script src="/js/app.js"></script>
+    {{>footer}}
+
+    <script src="/js/app.js"></script>
 </body>
-
 
 </html>
