--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -50,7 +50,7 @@ input {
 button {
     cursor: pointer;
     border: 1px solid #888888;
-    background: #888888;
+    background: #2e0d0d;
     color: white;
     padding: 8px;
 }
