--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get your weather!</p>
+        <p>Koristite ovaj sajt da biste dobili Vase vreme!</p>
 
         <form>
             <input placeholder="Location">
